# conjecture-behaviour-runner

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: README.md
docs/: MATURITY.md  README.md  SPEC.md  conjecture-behaviour-runner.md  conversational-authority-quality.md  failure-mode-control-system.md
examples/: README.md  control_plane_goldens.py  e2e_multi_turn.py  http_debug_app.py  http_e2e.py  minimal_script.py  parameterized_templates.py  scenario_compile_and_run.py  scenario_sole_continue.json  scenario_sole_continue.yaml  sole_continue_golden.json  sole_continue_golden.yaml  trajectory_authored_sole_continue.json  trajectory_observed_fail_dual_owner.json  trajectory_observed_fail_owner_steal.json  trajectory_observed_pass.json
incidents/: CATALOG.md  README.md  registry.yaml
incidents/_template/: INCIDENT.md  scenario.yaml  script.json
prompts/: conjecture_script_author.seed.md
proofs/: run_external_http_proof.py
proofs/external_http_app/: README.md  app.py
src/conjecture_behaviour_runner/: __init__.py  _version.py  candidate_run.py  candidates_ui.py  cli.py  cognition.py  compile_scenario.py  discover.py  harness.py  invariants.py  modes.py  path_faithful.py  pins.py  pipeline_tracker.py  protocol.py  report.py  scenario_models.py  schema.json  script.py  templates.py  temporal.py  trajectory.py  ui_server.py
templates/: README.md
templates/candidate_author/: README.md  residual.example.yaml
tests/: conftest.py  test_candidate_author.py  test_cli.py  test_cognition.py  test_control_plane_adapter.py  test_discover.py  test_experimental_quarantine.py  test_external_http_proof.py  test_harness_contracts.py  test_http_e2e.py  test_http_json.py  test_incidents_library.py  test_invariants.py  test_path_faithful.py  test_pins_generic.py  test_pipeline_tracker.py  test_portable_failure_registry.py  test_public_surface.py  test_report.py  test_script_io_and_scope.py  test_still_open_foundations.py  test_templates.py  test_temporal.py  test_ui_server.py
(+29 files in other folders)
